--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content=" ie=edge" http-equiv="X-UA-compatible" />
+    <meta http-equiv="X-UA-compatible" content="IE=edge" />
     <title>Around The U.S</title>
     <link href="./pages/index.css" rel="stylesheet" />
   </head>
@@ -25,56 +25,77 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
-              <img src="./images/yosemite-valley.jpg" class="card__image" />
+              <img
+                src="./images/yosemite-valley.jpg"
+                class="card__image"
+                alt="yosemite-valley"
+              />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lake-louise.png" class="card__image" />
+              <img
+                src="./images/lake-louise.png"
+                class="card__image"
+                alt="Lake-Louise"
+              />
               <div class="card__description">
                 <h2 class="card__title">Lake-Louise</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/bald-mountains.png" class="card__image" />
+              <img
+                src="./images/bald-mountains.png"
+                class="card__image"
+                alt="bald-mountains"
+              />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/latemar.png" class="card__image" />
+              <img
+                src="./images/latemar.png"
+                class="card__image"
+                alt="Latemar"
+              />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/vanoise-national-park.png"
                 class="card__image"
+                alt="Vanoise National Park "
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lago-di-braies.png" class="card__image" />
+              <img
+                src="./images/lago-di-braies.png"
+                class="card__image"
+                alt="Lago di braises"
+              />
               <div class="card__description">
                 <h2 class="card__title">Lake-Louise</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
           </ul>
