--- a/index.html
+++ b/index.html
@@ -105,5 +105,7 @@
         <p class="footer__trademark">© 2022 Around The U.S.</p>
       </footer>
     </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
