--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="edit"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" type="button"></button>
@@ -105,27 +109,29 @@
         <p class="footer__trademark">© 2022 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal modal__opened">
+
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close"></button>
+        <button class="modal__close" id="modal-close-button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
             type="text"
             name="title"
             class="modal__form-input"
-            placeholder="Jacques Cousteau"
+            placeholder="Name"
           />
           <input
             type="text"
             name="bio"
             class="modal__form-input"
-            placeholder="Explorer"
+            placeholder="Description"
           />
           <button class="modal__button">Save</button>
         </form>
       </div>
     </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
