--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="modal__container">
         <button class="modal__close"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form">
+        <form class="modal__form" id="profile-edit-form">
           <input
             type="text"
             name="title"
@@ -90,7 +90,7 @@
     </div>
     <!--Card Image Modal-->
     <div class="modal" id="card-image-modal">
-      <div class="modal__container">
+      <div class="modal__container" id="card-image-modal-container">
         <button class="modal__close"></button>
         <img src="" alt="" class="modal__image" id="modal-image" />
         <h2 class="modal__title" id="modal-title"></h2>
