--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
     <!--Card Template-->
     <template id="card-template">
       <li class="card">
-        <img class="card__image" src="" alt="" />
+        <img src="" alt="" class="card__image" />
+        <button
+          class="card__delete-button"
+          type="button"
+          aria-label="delete"
+        ></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button
