--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
             required
           />
           <span class="modal__error" id="add-card-url-input-error"></span>
-          <button class="modal__button modal__button_disabled" type="submit">
+          <button
+            class="modal__button modal__button_disabled"
+            type="submit"
+            disabled
+          >
             Save
           </button>
         </form>
