--- a/index.html
+++ b/index.html
@@ -112,11 +112,7 @@
             required
           />
           <span class="modal__error" id="add-card-url-input-error"></span>
-          <button
-            class="modal__button modal__button_disabled"
-            type="submit"
-            disabled
-          >
+          <button class="modal__button modal__button_disabled" type="submit">
             Save
           </button>
         </form>
@@ -149,7 +145,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
